--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-google-analytics",
   "version": "0.0.0",
   "scripts": {
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
@@ -17,10 +17,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.0",
-    "@angular/cli": "^11.0.2",
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
-    "@angular/compiler-cli": "^8.1.3",
     "@angular/core": "~8.1.0",
     "@angular/forms": "~8.1.0",
     "@angular/platform-browser": "~8.1.0",
@@ -36,7 +34,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
     "@angular/cli": "^11.0.2",
-    "@angular/compiler-cli": "^8.1.3",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.1.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
